# spowtd

./: .ackrc  .gitignore  CONTRIBUTING.md  LICENSE-BSD.txt  MANIFEST.in  README.md  README.txt  TODO.org  VERSION.txt  check_errors.sh  check_style.sh  meson.build  pylintrc  pyproject.toml  setup.py
.github/workflows/: wheels.yml
doc/: spowtd.1
spowtd/: __init__.py  classify.py  fit_offsets.py  load.py  pestfiles.py  plot_recession.py  plot_rise.py  plot_specific_yield.py  plot_time_series.py  plot_transmissivity.py  recession.py  regrid.py  rise.py  schema.sql  set_curvature.py  simulate_recession.py  simulate_rise.py  specific_yield.py  spline.py  transmissivity.py  user_interface.py  zeta_grid.py
spowtd/test/: __init__.py  conftest.py  test_classify.py  test_cli.py  test_fit_offsets.py  test_load.py  test_pestfiles.py  test_recession.py  test_rise.py  test_set_curvature.py  test_simulate_recession.py  test_simulate_rise.py  test_specific_yield.py  test_transmissivity.py
spowtd/test/sample_data/: curves_calibration_1.ins  curves_calibration_2.ins  evapotranspiration_1.txt  evapotranspiration_2.txt  peatclsm_curves_calibration_1.pst  peatclsm_curves_calibration_2.pst  peatclsm_parameters.yml  peatclsm_rise_calibration_1.pst  peatclsm_rise_calibration_2.pst  precipitation_1.txt  precipitation_2.txt  rise_calibration_2.ins  spline_curves_calibration_1.pst  spline_curves_calibration_2.pst  spline_parameters.yml  spline_rise_calibration_1.pst  spline_rise_calibration_2.pst  water_level_1.txt  water_level_2.txt
src/: SConstruct  user_guide.bib  user_guide.tex
src/doc/: SConstruct  spowtd.1.txt  user_guide.tex
src/spowtd/: __init__.py  _cumulant.pxd  _cumulant.pyi  _cumulant.pyx  _scalar_function.pxd  _scalar_function.pyi  _scalar_function.pyx  _spline.pxd  _spline.pyi  _spline.pyx  classify.py  elapsed_time.py  exceptions.py  fit_offsets.py  fpspline.py  hello.pyi  hello.pyx  load.py  meson.build  pestfiles.py  plot_recession.py  plot_rise.py  plot_specific_yield.py  plot_time_series.py  plot_transmissivity.py  recession.py  regrid.py  rise.py  set_curvature.py  simulate_recession.py  simulate_rise.py  specific_yield.py  spline.py  transmissivity.py  user_interface.py  zeta_grid.py
src/spowtd/dynamic_0d/: __init__.py  _simulator_0d.pxd  _simulator_0d.pyi  _simulator_0d.pyx  _state_0d.pxd  _state_0d.pyi  _state_0d.pyx  _stepper_0d.pxd  _stepper_0d.pyi  _stepper_0d.pyx  dispatch.py  dynamic_solve.py  meson.build
src/spowtd/functions/: __init__.py  _peat_growth.pxd  _peat_growth.pyi  _peat_growth.pyx  _specific_yield.pxd  _specific_yield.pyi  _specific_yield.pyx  _transmissivity.pxd  _transmissivity.pyi  _transmissivity.pyx  meson.build  peat_growth.py  peat_properties.py  recharge.py  specific_yield.py  transmissivity.py
src/spowtd/test/: __init__.py  conftest.py  markers.py  memory.py  peatclsm_hydraulic_functions.R  test_classify.py  test_cli.py  test_cumulants.py  test_fit_offsets.py  test_hello.py  test_load.py  test_peat_growth.py  test_pestfiles.py  test_rise.py  test_set_curvature.py  test_simulate_recession.py  test_simulate_rise.py  test_specific_yield.py  test_specific_yield_ext.py  test_spline.py  test_transmissivity.py  test_transmissivity_ext.py  test_version.py  utils.py
src/spowtd/test/sample_data/: evapotranspiration_2.txt  peatclsm_curves_calibration_2.pst  peatclsm_parameters.yml  rise_calibration_1.ins  rise_calibration_2.ins  spline_curves_calibration_1.pst  water_level_1.txt  water_level_2.txt
src/spowtd/test/test_dynamic_0d/: __init__.py  test_surface_simulator.py
