[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson>=1.2.0',
  'ninja',
  'cython>=3.1.0',
  'numpy>=1.25',
  # On Windows
  "delvewheel; sys_platform == 'win32'"
]

[project]
name = "spowtd"
requires-python = ">=3.12"
dynamic = ["version"]
description = "Scalar parameterization of water table dynamics"
authors = [{name = "Alex Cobb", email = "alexander.cobb@ntu.edu.sg"}]
readme = "README.md"
license = "BSD-2-Clause AND GPL-3.0-or-later"
license-files = [
    "LICENSE-BSD.txt",
    "LICENSE-GPL.txt"
]
dependencies = [
    "matplotlib",
    "numpy",
    "pytz",
    "scipy",
]

[project.scripts]
spowtd = "spowtd.main:main"

# Include binary artifacts and docs in wheel
[tool.meson-python]

[tool.cibuildwheel]
before-all = """
if command -v yum >/dev/null; then
    yum install -y gsl-devel
elif command -v dnf >/dev/null; then
    dnf install -y gsl-devel
elif command -v apt >/dev/null; then
   apt-get libgsl-dev
elif command -v apk >/dev/null; then
    apk add gsl-dev
fi
"""
before-build = "pip install meson meson-python ninja numpy cython scipy-openblas64"
test-command = "pytest --pyargs spowtd"
test-requires = "pylint pytest numpy PyYAML psutil"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install gsl libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-all = "vcpkg install gsl:x64-windows"
before-build = "pip install meson meson-python ninja numpy cython scipy-openblas64 delvewheel"
environment = { PKG_CONFIG_PATH = "C:/vcpkg/installed/x64-windows/lib/pkgconfig", CMAKE_PREFIX_PATH = "C:/vcpkg/installed/x64-windows" }
repair-wheel-command = 'delvewheel repair --add-path "C:/vcpkg/installed/x64-windows/bin;%PYTHON_SITEPACKAGES%/scipy_openblas/lib" -w {dest_dir} {wheel}'
